# tortoise-orm

./: .codacy.yml  .coveragerc  .gitignore  .green  .isort.cfg  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  conf.py  conftest.py  index.rst  models.py  pyproject.toml  requirements-accel.txt  requirements-dev.in  requirements-dev.txt  requirements-gis.txt  requirements-pypy.in  requirements-pypy.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codespell.yml  gh-pages-release.yml  gh-pages.yml  pypi.yml
docs/: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  cli.rst  conf.py  connections.rst  contrib.rst  databases.rst  examples.rst  exceptions.rst  expressions.rst  extra_requirements.txt  fields.rst  functions.rst  getting_started.rst  gis.rst  index.rst  indexes.rst  logging.rst  manager.rst  migration.rst  models.rst  models_and_fields.rst  projstyle.rst  query.rst  reference.rst  requirements.in  requirements.txt  roadmap.rst  router.rst  schema.rst  setup.rst  signal.rst  signals.rst  sphinx_autodoc_typehints.py  static_analysis.rst  timezone.rst  toc.rst  transactions.rst  type_globals.py  (+2 more)
docs/_static/: basic.css
docs/_templates/: space.html
docs/contrib/: aiohttp.rst  blacksheep.rst  fastapi.rst  linters.rst  mysql.rst  postgres.rst  pydantic.rst  quart.rst  sanic.rst  starlette.rst  unittest.rst
docs/examples/: aiohttp.rst  basic.rst  blacksheep.rst  fastapi.rst  pydantic.rst  quart.rst  sanic.rst  starlette.rst
examples/: __init__.py  aggregation.py  basic.py  basic_comments.py  basic_pydantic.py  complex_filtering.py  complex_prefetching.py  config.json  enum_fields.py  example_database.sql  functions.py  global_table_name_generator.py  group_by.py  manual_sql.py  postgres.py  pydantic_basic.py  pydantic_recursive.py  quart_example.py  relations.py  relations_recursive.py  relations_with_unique.py  router.py  schema_create.py  signals.py  transactions.py  two_databases.py
examples/aiohttp/: README.rst  main.py
examples/blacksheep/: README.md  _tests.py  models.py  server.py  test_api.py  tests.py
examples/fastapi/: README.rst  _tests.py  config.py  main.py  main_custom_timezone.py  models.py  routers.py  schemas.py
examples/pydantic/: basic.py  early_init.py  recursive.py  tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_4.py
examples/quart/: README.rst  main.py  models.py
examples/sanic/: README.rst  main.py  models.py
examples/starlette/: README.rst  main.py  models.py
tests/: extra_requirements.txt  init.json  init.yaml  model_bad_rel1.py  model_bad_rel2.py  model_bad_rel3.py  model_bad_rel4.py  model_multiple_pk.py  models_cyclic.py  models_dup1.py  models_dup2.py  models_fk_1.py  models_fk_2.py  models_fk_3.py  models_m2m_1.py  models_o2o_2.py  models_schema_create.py  requirements-pypy.in  requirements-pypy.txt  requirements.in  requirements.txt  test__models__.py  test_aggregation.py  test_aggregation_with_distinct.py  test_bad_relation_reference.py  test_basic.py  test_bulk.py  test_callable_default.py  test_case_when.py  test_concurrency.py  test_connection.py  test_connection_params.py  test_db_url.py  test_default.py  test_describe_model.py  test_early_init.py  test_f.py  test_field_subclass.py  test_filtering.py  test_filters.py  (+42 more)
tests/backends/: test_capabilities.py  test_clickhouse.py  test_connection_params.py  test_db_url.py  test_explain.py  test_mysql.py  test_postgres.py  test_reconnect.py
tests/contrib/: test_decorator.py  test_fastapi.py  test_functions.py  test_json_functions.py  test_pydantic.py  test_runner.py  test_tester.py
tests/fields/: subclass_fields.py  subclass_models.py  test_array.py  test_binary.py  test_bool.py  test_char.py  test_common.py  test_db_index.py  test_decimal.py  test_enum.py  test_fk.py  test_fk_uuid.py  test_fk_with_unique.py  test_float.py  test_int.py  test_json.py  test_m2m.py  test_m2m_uuid.py  test_nvarchar.py  test_o2o_with_unique.py  test_subclass.py  test_subclass_filters.py  test_text.py  test_time.py  test_uuid.py
tests/model_setup/: model_bad_rel1.py  model_bad_rel2.py  model_bad_rel3.py  model_bad_rel4.py  model_bad_rel5.py  model_bad_rel6.py  model_bad_rel7.py  model_bad_rel8.py  model_bad_rel9.py  model_generated_nonint.py  model_multiple_pk.py  model_nonpk_id.py  models__models__bad.py  models__models__good.py  models_dup1.py  models_dup2.py  models_dup3.py  models_multipe2.py  models_multipe3.py  test__models__.py  test_bad_relation_reference.py  test_init.py  test_models_multipe_name.py
tests/schema/: models_cyclic.py  models_fk_1.py  models_fk_2.py  models_fk_3.py  models_m2m_1.py  models_mysql_index.py  models_no_auto_create_m2m.py  models_no_db_constraint.py  models_o2o_2.py  models_o2o_3.py  models_postgres_index.py  models_schema_create.py  test_generate_schema.py
tests/utils/: test_describe_model.py  test_run_async.py
tortoise/: __init__.py  aggregation.py  apps.py  connection.py  connection_repository.py  converters.py  exceptions.py  expressions.py  fields.py  filters.py  function.py  functions.py  indexes.py  log.py  manager.py  models.py  pydantic.py  query_utils.py  queryset.py  router.py  signals.py  timezone.py  transactions.py  utils.py  validators.py
tortoise/contrib/: testing.py
tortoise/events/: __init__.py  decorators.py  emitter.py  event_emitter.py  events.py  exceptions.py
tortoise/fields/: __init__.py  base.py  data.py  relational.py
tortoise/gis/: __init__.py  gis_fields.py  hooks.py
tortoise/migrations/: exceptions.py  migration.py  operations.py
tortoise/serializers/: __init__.py  backends.py  base.py  datatypes.py  exceptions.py  field_utils.py  impl.py  meta.py
tortoise/tests/: init.json  init.yaml  inittest.py  model_bad_rel1.py  models_dup1.py  test_basic.py  (+49 more)
(+114 files in other folders)
