[tool.poetry]
name = "tortoise-orm"
version = "0.16.21"
description = "Easy async ORM for python, built with relations in mind"
authors = ["Andrey Bondar <andrey@bondar.ru>", "Nickolas Grigoriadis <nagrigoriadis@gmail.com>", "long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/tortoise/tortoise-orm"
repository = "https://github.com/tortoise/tortoise-orm.git"
documentation = "https://tortoise-orm.readthedocs.io"
keywords = ["sql", "mysql", "postgres", "psql", "sqlite", "aiosqlite", "asyncpg", "relational", "database", "rdbms", "orm", "object mapper", "async", "asyncio", "aio"]
packages = [
    { include = "tortoise" }
]
include = ["CHANGELOG.rst", "LICENSE", "README.rst"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: PL/SQL",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7"
pypika = "^0.44.0"
iso8601 = "^0.1.13"
aiosqlite = "^0.16.0"
pytz = "^2020.4"
ciso8601 = { version = "^2.1.2", markers = "sys_platform != 'win32' and implementation_name == 'cpython'", optional = true }
uvloop = { version = "^0.14.0", markers = "sys_platform != 'win32' and implementation_name == 'cpython'", optional = true }
python-rapidjson = { version = "*", optional = true }
asyncpg = { version = "*", optional = true }
aiomysql = { version = "*", optional = true }
# Documentation tools, which should in dev-dependencies but has bug, https://github.com/readthedocs/readthedocs.org/issues/4912
sphinx = { version = "*", optional = true }
cloud_sptheme = { version = "*", optional = true }
Pygments = { version = "*", optional = true }
docutils = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
# Linter tools
mypy = "*"
importlib_metadata = "*" # required by flake8
flake8-isort = "*"
flake8-comprehensions = "*"
darglint = "*"
pylint = "*"
pygments = "*"
bandit = "*"
black = "^20.8b1"
# Test tools
tox = "*"
asynctest = "*"
green = "*"
coveralls = "*"
pytest = "*"
nose2 = "*"
pytest-xdist = "*"
pytest-cov = "*"
# Pypi
twine = "*"
# Sample integration - Quart
quart = "*"
# Sample integration - Sanic
sanic = "*"
# Sample integration - Starlette
starlette = "*"
# Pydantic support
pydantic = "*"
# FastAPI support
fastapi = "*"
# Aiohttp support
aiohttp = "*"

[tool.poetry.extras]
accel = ["ciso8601", "uvloop", "python-rapidjson"]
asyncpg = ["asyncpg"]
aiomysql = ["aiomysql"]
docs = ["sphinx", "cloud_sptheme", "Pygments", "docutils"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
