[tool.poetry]
name = "tortoise-orm"
version = "0.18.0"
description = "Easy async ORM for python, built with relations in mind"
authors = ["Andrey Bondar <andrey@bondar.ru>", "Nickolas Grigoriadis <nagrigoriadis@gmail.com>", "long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/tortoise/tortoise-orm"
repository = "https://github.com/tortoise/tortoise-orm.git"
documentation = "https://tortoise-orm.readthedocs.io"
keywords = ["sql", "mysql", "postgres", "psql", "sqlite", "aiosqlite", "asyncpg", "relational", "database", "rdbms", "orm", "object mapper", "async", "asyncio", "aio"]
packages = [
    { include = "tortoise" }
]
include = ["CHANGELOG.rst", "LICENSE", "README.rst"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: PL/SQL",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7"
pypika-tortoise = "^0.1.2"
iso8601 = "^0.1.13"
aiosqlite = ">=0.16.0, <0.18.0"
pytz = "*"
ciso8601 = { version = "^2.1.2", markers = "sys_platform != 'win32' and implementation_name == 'cpython'", optional = true }
uvloop = { version = "^0.16.0", markers = "sys_platform != 'win32' and implementation_name == 'cpython'", optional = true }
orjson = { version = "*", optional = true }
asyncpg = { version = "*", optional = true }
aiomysql = { version = "*", optional = true }
asyncmy = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
# Linter tools
mypy = "*"
importlib_metadata = "*" # required by flake8
flake8 = "*"
flake8-isort = "*"
flake8-comprehensions = "*"
darglint = "*"
pylint = "*"
pygments = "*"
bandit = "*"
black = "*"
# Test tools
coveralls = "*"
pytest = "*"
pytest-xdist = "*"
pytest-cov = "*"
# Pypi
twine = "*"
# Sample integration - Quart
quart = "*"
# Sample integration - Sanic
sanic = "*"
# Sample integration - Starlette
starlette = "*"
# Pydantic support
pydantic = "*"
# FastAPI support
fastapi = "*"
# Aiohttp support
aiohttp = "*"
# BlackSheep support
blacksheep = "^1.0.9"
# mypy
types-PyYAML = "*"
types-pytz = "*"
types-PyMySQL = "*"
# Documentation tools
sphinx = "^4.2.0"
sphinx-material = "*"
Pygments = "*"
docutils = "*"
sphinx-copybutton = "*"

[tool.poetry.extras]
accel = ["ciso8601", "uvloop", "orjson"]
asyncpg = ["asyncpg"]
aiomysql = ["aiomysql"]
asyncmy = ["asyncmy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39']
